--- a/OpenEdXMobile/res/drawable/selectable_rounded_box_overlay.xml
+++ b/OpenEdXMobile/res/drawable/selectable_rounded_box_overlay.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/black">
+    android:color="@color/transparent_black_13">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <corners android:radius="@dimen/edx_box_radius" />
+            <corners android:radius="@dimen/edx_hairline" />
             <solid android:color="@color/transparent_white_26" />
         </shape>
     </item>
