--- a/OpenEdXMobile/res/values/strings_2.xml
+++ b/OpenEdXMobile/res/values/strings_2.xml
@@ -52,6 +52,9 @@
     <!-- Label for date when course expired on a specific date like on November 5 -->
     <string name="label_expired_on">Expired on {date}</string>
 
+    <!-- Labels for Course Dashboard -->
     <!-- Button that opens a full view of an earned certificate -->
     <string name="label_certificate_view_button">View certificate</string>
+    <!-- label for resume course section -->
+    <string name="label_resume_course">Resume course</string>
 </resources>
