feat: Address feedback comments
Fixes: LEARNER-8917

--- a/OpenEdXMobile/res/layout/fragment_my_courses_list.xml
+++ b/OpenEdXMobile/res/layout/fragment_my_courses_list.xml
@@ -24,6 +24,7 @@
                     android:layout_height="wrap_content"
                     android:paddingTop="@dimen/widget_margin_half"
                     android:paddingBottom="@dimen/widget_margin_half"
+                    android:clipToPadding="false"
                     android:visibility="gone"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:itemCount="2"
