--- a/OpenEdXMobile/res/values/strings_2.xml
+++ b/OpenEdXMobile/res/values/strings_2.xml
@@ -54,4 +54,6 @@
 
     <!-- Button that opens a full view of an earned certificate -->
     <string name="label_certificate_view_button">View certificate</string>
+    <!-- Title of Find Courses tab on Main Dashboard screen -->
+    <string name="label_discover">Discover</string>
 </resources>
