feat: Stylistic Changes for Course Outline
- Implement dropdown list with RecyclerView component.
- Sections to be listed with an accordion to expand/collapse
  in order to show/hide subsections under each section.
- By default, the first incomplete section is expanded while the
  rest of the sections will be closed.
- Checkmarks and green background to be shown on completed sections
  (if all sub-sections have been completed) and completed sub-sections.
- Convert the `CourseStatusInfo` endpoint structure to MVVM.

fixes: LEARNER-8928

--- a/OpenEdXMobile/res/values/dimens.xml
+++ b/OpenEdXMobile/res/values/dimens.xml
@@ -204,6 +204,7 @@
     <dimen name="bulk_download_progress_height">3dp</dimen>
     <dimen name="bulk_download_description_top_margin">4dp</dimen>
     <dimen name="download_background_size">30dp</dimen>
+    <dimen name="home_download_background_size">24dp</dimen>
 
     <!-- Logistration Launch screen -->
     <dimen name="logo_top_margin">90dp</dimen>
