--- a/OpenEdXMobile/res/layout/row_course_outline_list.xml
+++ b/OpenEdXMobile/res/layout/row_course_outline_list.xml
@@ -118,53 +118,9 @@
             app:srcCompat="@drawable/ic_lock"
             tools:visibility="visible" />
 
-        <LinearLayout
-            android:id="@+id/bulk_download_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/widget_margin_half"
-            android:background="@android:color/transparent"
-            android:gravity="center"
-            android:paddingEnd="@dimen/widget_margin_half"
-            android:visibility="gone"
-            tools:ignore="RtlSymmetry">
-
-            <FrameLayout
-                android:layout_width="@dimen/download_background_size"
-                android:layout_height="@dimen/download_background_size">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/bulk_download"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    app:srcCompat="@drawable/ic_download" />
-
-                <com.google.android.material.progressindicator.CircularProgressIndicator
-                    android:id="@+id/loading_indicator"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:indeterminate="true"
-                    android:visibility="visible"
-                    app:indicatorSize="@dimen/edx_large"
-                    app:trackThickness="@dimen/edx_x_quarter_margin"
-                    tools:visibility="visible" />
-            </FrameLayout>
-
-            <TextView
-                android:id="@+id/no_of_videos"
-                style="@style/semibold_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/widget_margin_half"
-                android:layout_marginEnd="@dimen/widget_margin_half"
-                android:textColor="@color/primaryXLightColor"
-                android:textSize="@dimen/edx_small"
-                android:visibility="gone"
-                tools:text="0"
-                tools:visibility="visible" />
-        </LinearLayout>
+        <include
+            layout="@layout/bulk_download_layout"
+            android:visibility="gone" />
 
     </LinearLayout>
 
