--- a/OpenEdXMobile/res/layout/activity_register.xml
+++ b/OpenEdXMobile/res/layout/activity_register.xml
@@ -110,10 +110,9 @@
 
     </FrameLayout>
 
-    <TextView
-        android:id="@+id/content_unavailable_error_text"
-        style="@style/content_unavailable_error_text"
-        android:text="@string/reset_no_network_message"
+    <include
+        android:id="@+id/content_error"
+        layout="@layout/content_error"
         android:visibility="gone" />
 
     <include
