--- a/OpenEdXMobile/res/layout/fragment_learn.xml
+++ b/OpenEdXMobile/res/layout/fragment_learn.xml
@@ -1,49 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/ll_learn_selection"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/learn_selection_width"
-        android:layout_gravity="center"
-        android:layout_marginStart="@dimen/container_padding"
-        android:layout_marginEnd="@dimen/container_padding"
-        android:background="@color/white"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="UselessParent">
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:animateLayoutChanges="true"
+        android:background="@color/neutralWhite"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <TextView
-            android:id="@+id/tv_selected_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="?attr/fontSemiBold"
-            android:paddingEnd="@dimen/learn_drop_down_icon_margin"
-            android:text="@string/label_my_courses"
-            android:textColor="@color/primaryDarkColor"
-            android:textSize="@dimen/edx_large"
-            tools:ignore="RtlSymmetry" />
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/edx_quadruple_margin"
+            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_drop_down"
-            tools:ignore="ContentDescription" />
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/edx_button_height"
+                android:layout_gravity="center"
+                android:background="@color/neutralWhite"
+                android:paddingStart="@dimen/container_padding"
+                android:paddingEnd="@dimen/container_padding"
+                android:theme="@style/AppTheme.AppBarOverlay"
+                app:contentInsetStart="0dp"
+                app:layout_collapseMode="parallax">
 
-    </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/ll_learn_selection"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/edx_button_height"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/tv_selected_item"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="?attr/fontSemiBold"
+                        android:paddingEnd="@dimen/learn_drop_down_icon_margin"
+                        android:text="@string/label_my_courses"
+                        android:textColor="@color/primaryDarkColor"
+                        android:textSize="@dimen/edx_large"
+                        tools:ignore="RtlSymmetry" />
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/iv_selector_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        app:srcCompat="@drawable/ic_drop_down"
+                        tools:ignore="ContentDescription" />
+
+                </LinearLayout>
+
+            </androidx.appcompat.widget.Toolbar>
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
         android:id="@+id/fl_learn"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_learn_selection" />
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
