--- a/OpenEdXMobile/res/values/strings_2.xml
+++ b/OpenEdXMobile/res/values/strings_2.xml
@@ -13,9 +13,9 @@
     <!-- Title of Learn tab on main dashboard screen -->
     <string name="label_learn">Learn</string>
     <!-- Title of user's course list screen -->
-    <string name="label_my_courses">My Courses</string>
+    <string name="label_my_courses">My courses</string>
     <!-- Title of user's programs list screen -->
-    <string name="label_my_programs">My Programs</string>
+    <string name="label_my_programs">My programs</string>
 
     <!-- Course dashboard screen-->
     <!-- Title of Home tab on course dashboard screen -->
@@ -54,4 +54,6 @@
 
     <!-- Button that opens a full view of an earned certificate -->
     <string name="label_certificate_view_button">View certificate</string>
+    <!-- Title of Find Courses tab on Main Dashboard screen -->
+    <string name="label_discover">Discover</string>
 </resources>
