feat: Add Whats New for purchase-able courses
- Added new Whats New for Purchase-able courses on Course Dashboard
- What's new will be visible only for once for each purchase-able course
- Integrated Airbnb Lottie library to load json file

fixes: LEARNER-9348

--- a/OpenEdXMobile/res/layout/fragment_whats_new.xml
+++ b/OpenEdXMobile/res/layout/fragment_whats_new.xml
@@ -52,7 +52,8 @@
             android:id="@+id/fl_bottom_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="@dimen/whats_new_bottom_bar_min_height">
+            android:minHeight="@dimen/whats_new_bottom_bar_min_height"
+            android:visibility="gone">
 
             <FrameLayout
                 android:id="@+id/indicator_container"
