--- a/OpenEdXMobile/res/layout/fragment_whats_new_item.xml
+++ b/OpenEdXMobile/res/layout/fragment_whats_new_item.xml
@@ -1,42 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:id="@+id/ll_whats_new_item_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/whats_new_gradient"
         android:orientation="vertical">
 
         <FrameLayout
             android:id="@+id/fl_image_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.7"
-            android:background="@drawable/whats_new_gradient">
+            android:layout_weight="0.75"
+            android:padding="@dimen/edx_double_margin">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/image"
-                android:layout_width="match_parent"
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_gravity="bottom"
-                android:paddingStart="@dimen/whats_new_image_horizontal_margin"
-                android:paddingEnd="@dimen/whats_new_image_horizontal_margin"
-                tools:ignore="ContentDescription"
-                tools:src="@drawable/screen_1" />
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/edx_double_margin"
+                android:layout_marginEnd="@dimen/edx_double_margin"
+                app:cardCornerRadius="12dp">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"
+                    tools:ignore="ContentDescription"
+                    tools:src="@drawable/screen_1" />
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/lottie"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/primaryBaseColor"
+                    android:scaleType="fitXY"
+                    android:visibility="gone"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"
+                    app:lottie_speed="1"
+                    tools:visibility="visible" />
+            </androidx.cardview.widget.CardView>
         </FrameLayout>
 
         <LinearLayout
             android:id="@+id/ll_message_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.3"
-            android:background="@color/primaryBaseColor"
+            android:layout_weight="0.25"
             android:gravity="top|center_horizontal"
             android:orientation="vertical"
-            android:paddingStart="@dimen/edx_margin"
-            android:paddingTop="@dimen/edx_margin"
-            android:paddingEnd="@dimen/edx_margin">
+            android:padding="@dimen/edx_margin">
 
             <TextView
                 android:id="@+id/title"
@@ -45,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="@color/neutralWhite"
-                android:textSize="@dimen/edx_base"
+                android:textSize="@dimen/edx_large"
                 tools:text="App Feedback" />
 
             <TextView
