feat: Display shift dates banner on course dashboard
This commit displays the shift dates banner on the course dashboard.
The following changes have been made to achieve this:

- The shift dates banner has been removed from the Course Home and
  Dates tab to avoid clutter.
- All other banners will continue to be visible on the Course Dates
  tab, except for the shift date banner.
- The logic for the calendar out of sync has also been moved from
  the Home tab to the Course Tabs Dashboard.

Fixes: LEARNER-9320

--- a/OpenEdXMobile/res/layout/course_dashboard_toolbar.xml
+++ b/OpenEdXMobile/res/layout/course_dashboard_toolbar.xml
@@ -129,6 +129,11 @@
                 </LinearLayout>
 
                 <include
+                    android:id="@+id/dates_banner"
+                    layout="@layout/layout_course_dates_banner"
+                    android:visibility="gone" />
+
+                <include
                     android:id="@+id/certificate"
                     layout="@layout/layout_course_dashboard_certificate"
                     android:visibility="gone" />
