--- a/OpenEdXMobile/res/layout/layout_course_dates_banner.xml
+++ b/OpenEdXMobile/res/layout/layout_course_dates_banner.xml
@@ -25,7 +25,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_shift_dates"
-            style="@style/edX.Widget.PrimaryBaseActionButton"
+            style="@style/edX.Widget.TertiaryActionButton"
             android:layout_marginTop="@dimen/edx_default_margin"
             android:text="@string/course_dates_banner_reset_date_button"
             android:visibility="gone"
