chore: Update Resume course design on CourseDashboard (#1789)
chore: Update Resume course design on CourseDashboard
- Update the resume course button design according to new app nav
- Update the strings and remove the old ones
- Remove the unused resources
fixes: LEARNER-9226

--- a/OpenEdXMobile/res/values/strings_2.xml
+++ b/OpenEdXMobile/res/values/strings_2.xml
@@ -56,4 +56,6 @@
     <string name="label_certificate_view_button">View certificate</string>
     <!-- Title of Find Courses tab on Main Dashboard screen -->
     <string name="label_discover">Discover</string>
+    <!-- Label for resume course section -->
+    <string name="label_resume_course">Resume course</string>
 </resources>
