feat: Redesign Social Auth Panel
- Redesigns Social Auth signIn/SignUp buttons on Login & Register Screen
- Remove old and unused resources

--- a/OpenEdXMobile/res/layout/panel_social_auth.xml
+++ b/OpenEdXMobile/res/layout/panel_social_auth.xml
@@ -2,52 +2,45 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/panel_social_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="@dimen/social_auth_bottom_margin"
-        android:baselineAligned="false"
-        android:gravity="center">
+        android:layout_marginTop="@dimen/widget_margin_double"
+        android:layout_marginBottom="@dimen/edx_default_margin"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <include
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/google_button"
-            layout="@layout/panel_google_button"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/social_btn_height"
-            app:layout_constraintEnd_toStartOf="@+id/view_padding"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            style="@style/edX.Widget.SocialLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edx_neutral_x_dark_bordered_button"
+            android:text="@string/sign_in_with_google"
+            android:textColor="@color/neutralXDark"
+            app:icon="@drawable/ic_google_logo" />
 
-        <View
-            android:id="@+id/view_padding"
-            android:layout_width="6dp"
-            android:layout_height="1dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <include
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/facebook_button"
-            layout="@layout/panel_facebook_button"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/social_btn_height"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/view_padding"
-            app:layout_constraintTop_toTopOf="parent" />
+            style="@style/edX.Widget.SocialLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/edx_default_margin"
+            android:background="@color/fb_bg"
+            android:text="@string/sign_in_with_facebook"
+            android:textColor="@color/neutralWhite"
+            app:icon="@drawable/ic_facebook_logo" />
 
-        <include
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/microsoft_button"
-            layout="@layout/panel_microsoft_button"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/social_btn_height"
-            android:layout_marginTop="@dimen/social_button_top_margin"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_padding"
-            app:layout_constraintWidth_percent=".50" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            style="@style/edX.Widget.SocialLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/edx_default_margin"
+            android:background="@color/microsoft_bg"
+            android:text="@string/sign_in_with_microsoft"
+            android:textColor="@color/neutralWhite"
+            app:icon="@drawable/ic_microsoft_logo" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
