--- a/OpenEdXMobile/res/values/styles.xml
+++ b/OpenEdXMobile/res/values/styles.xml
@@ -344,8 +344,9 @@
         <item name="android:textColor">@color/neutralXDark</item>
         <item name="android:textColorLink">@color/primaryDarkColor</item>
         <item name="android:gravity">start</item>
-        <item name="android:textSize">@dimen/edx_xxx_small</item>
+        <item name="android:textSize">@dimen/edx_xx_small</item>
         <item name="lineHeight">@dimen/edx_x_small</item>
+        <item name="lineSpacing">@dimen/edx_x_quarter_margin</item>
     </style>
 
     <!-- Styles from the edX style guide will be nested under "edX" -->
@@ -374,7 +375,7 @@
 
     <style name="edX.Widget.SignInButtonLayout">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/edx_button_height</item>
+        <item name="android:layout_height">@dimen/upgrade_now_button_height</item>
         <item name="android:layout_marginTop">@dimen/edx_margin</item>
         <item name="android:background">@drawable/edx_brand_single_state_button</item>
     </style>
@@ -583,5 +584,35 @@
     <style name="edX.Widget.TertiaryActionButton" parent="edX.Widget.PrimaryActionButton">
         <item name="android:background">@color/primaryBaseColor</item>
         <item name="android:textSize">@dimen/edx_x_small</item>
+    </style>
+
+    <style name="edX.Widget.SocialLogin" parent="android:Widget.Material.Button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">@dimen/upgrade_now_button_height</item>
+        <item name="android:textSize">@dimen/edx_base</item>
+        <item name="android:foreground">@drawable/selectable_rounded_box_overlay</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:gravity">start</item>
+        <item name="android:paddingStart">@dimen/edx_margin</item>
+        <item name="android:paddingEnd">@dimen/edx_margin</item>
+        <item name="backgroundTint">@null</item>
+        <item name="iconTint">@null</item>
+        <item name="iconGravity">start</item>
+        <item name="iconPadding">@dimen/edx_margin</item>
+    </style>
+
+
+    <style name="edX.Widget.inputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="minHeight">@dimen/upgrade_now_button_height</item>
+        <item name="hintTextColor">@color/neutralXXDark</item>
+        <item name="boxStrokeColor">@color/neutralXDark</item>
+        <item name="boxStrokeWidthFocused">1dp</item>
+        <item name="boxCornerRadiusTopStart">0dp</item>
+        <item name="boxCornerRadiusTopEnd">0dp</item>
+        <item name="boxCornerRadiusBottomStart">0dp</item>
+        <item name="boxCornerRadiusBottomEnd">0dp</item>
     </style>
 </resources>
