--- a/OpenEdXMobile/res/layout/activity_login.xml
+++ b/OpenEdXMobile/res/layout/activity_login.xml
@@ -19,153 +19,110 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <LinearLayout
-                android:id="@+id/top_layout"
+                android:id="@+id/ll_login_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/login_layout_bottom_margin"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="@dimen/edx_default_margin">
 
-                <FrameLayout
-                    android:id="@+id/fl_logo"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/login_edx_logo_height"
-                    android:layout_marginStart="@dimen/login_margin_horizontal"
-                    android:layout_marginTop="@dimen/login_logo_margin_top"
-                    android:layout_marginEnd="@dimen/login_margin_horizontal"
-                    android:layout_marginBottom="@dimen/login_logo_margin_bottom">
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/login_logo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="@dimen/edx_default_margin"
+                    android:contentDescription="@string/phonetic_app_name"
+                    app:srcCompat="@drawable/login_screen_logo" />
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/login_map"
-                        android:layout_width="wrap_content"
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/usernameWrapper"
+                    style="@style/edX.Widget.inputLayout"
+                    android:layout_marginTop="@dimen/edx_default_margin"
+                    android:hint="@string/email_username">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/email_et"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:contentDescription="@null"
-                        android:scaleType="fitXY"
-                        app:srcCompat="@drawable/login_screen_image" />
+                        android:inputType="textEmailAddress"
+                        android:maxLength="100" />
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/login_logo"
-                        android:layout_width="wrap_content"
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/passwordWrapper"
+                    style="@style/edX.Widget.inputLayout"
+                    android:layout_marginTop="@dimen/edx_default_margin"
+                    android:hint="@string/password"
+                    app:endIconMode="password_toggle">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/password_et"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:contentDescription="@string/phonetic_app_name"
-                        app:srcCompat="@drawable/login_screen_logo" />
-                </FrameLayout>
+                        android:inputType="textPassword"
+                        android:maxLength="100" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <LinearLayout
-                    android:id="@+id/ll_login_form"
+                    android:id="@+id/login_button_layout"
+                    style="@style/edX.Widget.SignInButtonLayout"
+                    android:contentDescription="@string/login_btn"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/login_btn_tv"
+                        style="@style/edX.Widget.SignInButton"
+                        android:text="@string/login" />
+
+                    <include
+                        android:id="@+id/progress"
+                        layout="@layout/button_progress_indicator" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/forgot_password_tv"
+                    style="@style/regular_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/edx_half_margin"
+                    android:layout_marginBottom="@dimen/edx_default_margin_double"
+                    android:background="@drawable/selectable_rounded_box_overlay"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:padding="@dimen/edx_half_margin"
+                    android:text="@string/forgot_password"
+                    android:textColor="@color/neutralXXDark"
+                    android:textSize="@dimen/edx_small" />
+
+
+                <include
+                    android:id="@+id/social_auth"
+                    layout="@layout/panel_social_auth" />
+
+                <TextView
+                    android:id="@+id/end_user_agreement_tv"
+                    style="@style/agreement_text_style"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingStart="@dimen/login_margin_horizontal"
-                    android:paddingEnd="@dimen/login_margin_horizontal">
+                    android:text="@string/by_signing_in" />
 
-                    <org.edx.mobile.view.custom.EdxTextInputLayout
-                        android:id="@+id/usernameWrapper"
-                        style="@style/Widget.Design.TextInputLayout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/email_username"
-                        android:paddingStart="@dimen/login_field_horizontal_padding"
-                        android:paddingEnd="@dimen/login_field_horizontal_padding"
-                        android:textColorHint="@color/neutralXXDark">
-
-                        <androidx.appcompat.widget.AppCompatEditText
-                            android:id="@+id/email_et"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="textEmailAddress"
-                            android:maxLength="100" />
-
-                    </org.edx.mobile.view.custom.EdxTextInputLayout>
-
-                    <org.edx.mobile.view.custom.EdxTextInputLayout
-                        android:id="@+id/passwordWrapper"
-                        style="@style/Widget.Design.TextInputLayout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/password"
-                        android:paddingStart="@dimen/login_field_horizontal_padding"
-                        android:paddingEnd="@dimen/login_field_horizontal_padding"
-                        android:textColorHint="@color/neutralXXDark">
-
-                        <androidx.appcompat.widget.AppCompatEditText
-                            android:id="@+id/password_et"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/edx_half_margin"
-                            android:inputType="textPassword"
-                            android:maxLength="100" />
-
-                    </org.edx.mobile.view.custom.EdxTextInputLayout>
-
-                    <TextView
-                        android:id="@+id/forgot_password_tv"
-                        style="@style/semibold_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/edx_half_margin"
-                        android:background="@drawable/selectable_box_overlay"
-                        android:focusable="true"
-                        android:gravity="center"
-                        android:text="@string/forgot_password"
-                        android:textColor="@color/infoBase"
-                        android:textSize="@dimen/edx_x_small" />
-
-                    <LinearLayout
-                        android:id="@+id/login_button_layout"
-                        style="@style/edX.Widget.SignInButtonLayout"
-                        android:contentDescription="@string/login_btn"
-                        android:focusable="true"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/login_btn_tv"
-                            style="@style/edX.Widget.SignInButton"
-                            android:text="@string/login" />
-
-                        <include
-                            android:id="@+id/progress"
-                            layout="@layout/button_progress_indicator" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/panel_login_social"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <org.edx.mobile.view.custom.DividerWithTextView
-                            android:id="@+id/text_alternate_sign_in"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/or_sign_in_with" />
-
-                        <include
-                            android:id="@+id/social_auth"
-                            layout="@layout/panel_social_auth" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/end_user_agreement_tv"
-                        style="@style/agreement_text_style"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/by_signing_in" />
-
-                    <TextView
-                        android:id="@+id/version_env_tv"
-                        style="@style/regular_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/edx_margin"
-                        android:gravity="center_horizontal"
-                        android:text=""
-                        android:textColor="@color/transparent_black_80"
-                        android:textSize="@dimen/edx_xxx_small"
-                        android:visibility="invisible" />
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/version_env_tv"
+                    style="@style/regular_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/edx_margin"
+                    android:gravity="center_horizontal"
+                    android:text=""
+                    android:textColor="@color/transparent_black_80"
+                    android:textSize="@dimen/edx_xxx_small"
+                    android:visibility="invisible" />
             </LinearLayout>
         </ScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
