refactor: Convert custom registration Input fields to kotlin

--- a/OpenEdXMobile/res/layout/view_register_auto_complete.xml
+++ b/OpenEdXMobile/res/layout/view_register_auto_complete.xml
@@ -1,41 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ll_register_auto_complete"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingTop="@dimen/registration_field_vertical_padding"
-    android:paddingBottom="@dimen/registration_field_vertical_padding">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <org.edx.mobile.view.custom.EdxTextInputLayout
-        android:id="@+id/input_wrapper_auto_complete"
-        style="@style/Widget.Design.TextInputLayout"
+    <LinearLayout
+        android:id="@+id/ll_auto_complete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/neutralXXDark">
+        android:orientation="vertical"
+        android:paddingTop="@dimen/edx_x_quarter_margin"
+        android:paddingBottom="@dimen/edx_x_quarter_margin">
 
-        <org.edx.mobile.module.registration.view.RegistrationOptionAutoCompleteTextView
-            android:id="@+id/input_auto_complete"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:focusable="true"
-            android:imeOptions="actionDone"
-            android:inputType="textAutoComplete"
-            android:maxLines="1"
-            android:textColorHint="@color/neutralXXDark" />
-    </org.edx.mobile.view.custom.EdxTextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/auto_complete_layout"
+            style="@style/edX.Widget.inputLayout"
+            android:textColorHint="@color/neutralXXDark"
+            app:endIconMode="dropdown_menu">
 
-    <TextView
-        android:id="@+id/input_auto_complete_instructions"
-        style="@style/registration_instruction_message"
-        android:visibility="visible"
-        tools:text="error text here" />
+            <org.edx.mobile.module.registration.view.RegistrationOptionAutoCompleteTextView
+                android:id="@+id/et_auto_complete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:focusable="true"
+                android:imeOptions="actionDone"
+                android:inputType="textAutoComplete"
+                android:maxLines="1"
+                android:paddingStart="@dimen/edx_default_margin"
+                android:paddingEnd="@dimen/edx_default_margin"
+                android:textColorHint="@color/neutralXXDark"
+                android:textSize="@dimen/edx_small" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/input_auto_complete_error"
-        style="@style/registration_error_message"
-        android:visibility="visible"
-        tools:text="error text here" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/instructions"
+            style="@style/registration_instruction_message"
+            android:visibility="visible"
+            tools:text="error text here" />
+
+        <TextView
+            android:id="@+id/error_message"
+            style="@style/registration_error_message"
+            android:visibility="visible"
+            tools:text="error text here" />
+    </LinearLayout>
+</layout>
