--- a/OpenEdXMobile/res/layout/view_register_edit_text.xml
+++ b/OpenEdXMobile/res/layout/view_register_edit_text.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ll_register_edit_text_root"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="@dimen/registration_field_vertical_padding"
-    android:paddingBottom="@dimen/registration_field_vertical_padding"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <org.edx.mobile.view.custom.EdxTextInputLayout
-        android:id="@+id/register_edit_text_til"
-        style="@style/Widget.Design.TextInputLayout"
+    <LinearLayout
+        android:id="@+id/ll_register_edit_text_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/neutralXXDark">
+        android:orientation="vertical"
+        android:paddingTop="@dimen/edx_x_quarter_margin"
+        android:paddingBottom="@dimen/edx_x_quarter_margin">
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/register_edit_text_tilEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-            android:textColor="@color/neutralBlack"
-            android:focusableInTouchMode="true"/>
-    </org.edx.mobile.view.custom.EdxTextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout"
+            style="@style/edX.Widget.inputLayout"
+            android:layout_marginTop="@dimen/edx_default_margin">
 
-    <TextView
-        android:id="@+id/input_instructions"
-        style="@style/registration_instruction_message"
-        android:visibility="gone" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:maxLength="100" />
 
-    <TextView
-        android:id="@+id/input_error"
-        style="@style/registration_error_message"
-        android:visibility="gone" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/instructions"
+            style="@style/registration_instruction_message"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/error_message"
+            style="@style/registration_error_message"
+            android:visibility="gone" />
+
+    </LinearLayout>
+</layout>
