--- a/OpenEdXMobile/res/layout/fragment_account.xml
+++ b/OpenEdXMobile/res/layout/fragment_account.xml
@@ -428,7 +428,7 @@
 
                 <TextView
                     style="@style/profile_field_description"
-                    android:layout_marginBottom="@dimen/divider_with_text_margin"
+                    android:layout_marginBottom="@dimen/container_padding"
                     android:text="@string/description_delete_account"
                     android:textAlignment="center" />
 
