--- a/OpenEdXMobile/res/layout/view_register_auto_complete.xml
+++ b/OpenEdXMobile/res/layout/view_register_auto_complete.xml
@@ -21,6 +21,7 @@
                 android:id="@+id/et_auto_complete"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="@dimen/auth_panel_btn_height"
                 android:ellipsize="end"
                 android:focusable="true"
                 android:imeOptions="actionDone"
